tests/userdata_derive/non_into_lua_field.rs
use mlua::{FromLua, UserData};

#[derive(Clone)]
struct NotIntoLua(u64);

#[derive(Clone, FromLua, UserData)]
struct UserDataFieldsNotIntoLua {
    #[field]
    f: NotIntoLua,
}

fn main() {}
